fix animation text on mobile view

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,11 @@
     width: 350px;
   }
 }
+@media (min-width: 375px) {
+  .animation-text {
+    width: 350px;
+  }
+}
 
 @keyframes peek {
   0% {
